service-b/deployment-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: heinha/service-b:1.0
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: service-b
