service-b/vs-b.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-b
spec:
  hosts:
  - service-b
  http:
  - route:
    - destination:
        host: service-b
        port:
          number: 5001
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx
